addons/web_editor/static/src/scss/wysiwyg.scss
$o-we-overlay-zindex: ($zindex-fixed + $zindex-modal-backdrop) / 2 !default;
$o-we-zindex: $o-we-overlay-zindex + 1 !default;

// Floating Toolbar Variables
$o-we-toolbar-entries-gap: $o-we-sidebar-content-field-control-item-spacing * .7;
$o-we-toolbar-entries-border-width: 1px;
$o-we-toolbar-entries-padding: $o-we-sidebar-content-padding-base * .7;

$o-we-toolbar-bg: #FFF;
$o-we-toolbar-bg-active: rgba($o-we-fg-light, .2);
$o-we-toolbar-border: $o-we-fg-light;
$o-we-toolbar-color-text: $o-we-bg-light;
$o-we-toolbar-color-accent: #018597;
$o-we-toolbar-color-clickable: $o-we-bg-lightest;
$o-we-toolbar-color-clickable-active: $o-we-bg-darkest;

// Use css variables to control the default style of the editor so that an
// external assets bundle can influence it without duplicating the css.
:root {
    @include print-variable('o-we-toolbar-height', $o-we-toolbar-height);
}

.o_we_command_protector {
    font-weight: 400 !important;

    b, strong {
        font-weight: 700 !important;
    }
    * {
        font-weight: inherit !important;
    }
    .btn {
        text-align: unset !important;
    }
}

// Editor website toolbar
.wysiwyg_iframe,
.note-editor {
    border: $o-we-border-width solid $o-we-fg-light;
    margin: 0;
    padding: 0;
}

// Colorpicker - Generic rules shared among backend & frontend
.colorpicker {

    // Controll the design using css variables. These values can be customized
    // in any bundle/layout avoiding the need to override.
    --bg: #{$o-we-toolbar-bg};
    --text-rgb: #{red($o-we-toolbar-color-text)}, #{green($o-we-toolbar-color-text)}, #{blue($o-we-toolbar-color-text)};
    --border-rgb: var(--text-rgb);

    --tab-border-top: transparent;
    --tab-border-bottom: #{$o-we-toolbar-border};

    --btn-color-active: inset 0 0 0 2px #{$o-we-accent},
                        inset 0 0 0 3px var(--bg),
                        inset 0 0 0 4px rgba(var(--border-rgb), .5);

    &, input {
        color: rgba(var(--text-rgb), 1);
    }

    label {
        color: rgba(var(--text-rgb), .5);
    }

    button {
        outline: none;
    }

    .o_we_colorpicker_switch_panel {
        font-size: $o-we-font-size;
        border-bottom: 1px solid var(--tab-border-bottom);
        box-shadow: inset 0 1px 0 var(--tab-border-top);
    }

    .o_we_colorpicker_switch_pane_btn {
        flex: 0 0 auto;
    }

    .o_colorpicker_reset {
        max-width: 40%;
    }

    .o_colorpicker_sections {
        background: var(--bg);

        > * {
            padding-top: $o-we-sidebar-content-field-spacing;

            &:first-child {
                padding-top: 0;
            }
        }

        .o_colorpicker_widget {
            .o_hex_div, .o_rgba_div  {
                &:focus-within {
                    border-color: $o-we-sidebar-content-field-input-border-color;
                }
            }
            .o_color_picker_inputs {
                input, input:focus {
                    border: none;
                    outline: none;
                }
            }
        }

        .o_we_color_btn, .o_color_pick_area, .o_color_slider, .o_opacity_slider:before, .o_hex_div, .o_rgba_div {
            box-shadow: inset 0 0 0 1px rgba(var(--border-rgb), .5);
        }

        .o_we_color_btn {
            position: relative;
            float: left;
            width: percentage(1 / 8);
            padding-top: percentage(1 / 10);
            margin: 0;
            border: 1px solid var(--bg);

            &.o_colorpicker_reset {
                background-color: transparent;

                &::before {
                    @include o-position-absolute(0, 0, 0, 0);
                    font-family: FontAwesome !important;
                    content: "\f00d" !important;// fa-times
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    color: $o-we-color-danger;
                }
            }

            &.selected {
                box-shadow: var(--btn-color-active);
            }

            &.o_btn_transparent::before {
                background-color: transparent;
            }
        }

        .o_colorpicker_section {
            &::after {
                content: "";
                display: table;
                clear: both;
            }

            &[data-name="transparent_grayscale"], &[data-name="theme"], &[data-name="reset"], &[data-name="custom"] {
                .o_we_color_btn {
                    @extend %o-preview-alpha-background;

                    &::before, &::after {
                        box-shadow: inherit;
                    }
                }
            }
        }
    }
}

// Toolbar - Generic rules shared among backend & frontend
.oe-toolbar {
    display: grid;

    .btn {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .colorpicker-menu {
        height: auto!important;
        box-sizing: content-box;
        min-height: fit-content;
    }

    .dropdown-item {
        &.active, &.selected {
            &:not(.dropdown-item_active_noarrow):before {
                transform: translate(-1.5em, 0);
                height: 100%;
                display: flex;
                align-items: center;
            }
        }
    }
}
/* ... */

